@@ -81,6 +81,8 @@ logfile =
 #                 title: Additional text to place in the title bar of the window.
 #          fastbioslogo: If set, DOSBox-X will enable fast BIOS logo mode (skip 1-second pause).
 #           startbanner: If set (default), DOSBox-X will display the welcome banner when it starts.
+#      bannercolortheme: You can specify a different background color theme for the welcome banner from the default one.
+#                          Possible values: default, black, red, green, yellow, blue, magenta, cyan, white.
 #          quit warning: Set this option to indicate whether DOSBox-X should show a warning message when the user tries to close its window.
 #                          If set to auto (default), DOSBox-X will warn if a DOS program, game or a guest system is currently running.
 #                          If set to autofile, DOSBox-X will warn if there are open file handles or a guest system is currently running.
@@ -113,6 +115,7 @@ language              =
 title                 = 
 fastbioslogo          = false
 startbanner           = true
+bannercolortheme      = default
 quit warning          = auto
 show advanced options = false
 hostkey               = mapper
