@@ -166,6 +166,8 @@ fileio      = false
 #                                           title: Additional text to place in the title bar of the window.
 #                                    fastbioslogo: If set, DOSBox-X will enable fast BIOS logo mode (skip 1-second pause).
 #                                     startbanner: If set (default), DOSBox-X will display the welcome banner when it starts.
+#                                bannercolortheme: You can specify a different background color theme for the welcome banner from the default one.
+#                                                    Possible values: default, black, red, green, yellow, blue, magenta, cyan, white.
 #                                       dpi aware: Set this option (auto by default) to indicate to your OS that DOSBox-X is DPI aware.
 #                                                    If it is not set, Windows Vista/7/8/10 and higher may upscale the DOSBox-X window
 #                                                    on higher resolution monitors which is probably not what you want.
@@ -357,6 +359,7 @@ language                                        =
 title                                           = 
 fastbioslogo                                    = false
 startbanner                                     = true
+bannercolortheme                                = default
 dpi aware                                       = auto
 quit warning                                    = auto
 show advanced options                           = false
