@@ -3,6 +3,10 @@
     menus. The message files as written by the config
     tool (CLI or GUI) will contain the menu texts for
     translations from the English language. (Wengier)
+  - Added "bannercolortheme" config option [in [dosbox]
+    section]) so that users can change the background
+    color theme of the welcome banner from the default
+    blue color when DOSBox-X starts. (Wengier)
   - Added "Save & Restart" button to the Configuration
     Tool's "Save" option for saving the config file and
     then automatically restarting DOSBox-X with this
